fixing height on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
   font-family: 'Lato', sans-serif;
   margin: 0;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   
 }
 
